--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3Karty</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style_responsive.css" rel="stylesheet" />
   </head>
   <body>
     <div class="title">
