--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3Karty</title>
-    <link href="style_responsive.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="title">
-      <h1>Gra: 3Karty</h1>
-    </div>
+    <h1 class="title1">Gra w 3Karty:</h1>
     <button class="opis" onclick="pokazopis()">Opis</button>
 
     <div class="motyw">
