--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="mot2"></div>
       </div>
     </div>
-    
     <div class="ile">0</div>
+    
     <div class="gra">
       <div class="karta" id="karta1"></div>
       <div class="karta" id="karta3"></div>
@@ -39,6 +39,7 @@
     </div>
     <div id="wynik"><b> </b></div>
     <div class="poz">Poziom Trudnosci:</div>
+    <div id="poziom"></div>
     <h3 class="ilosc">
       Ilosc Tasowań:
       <div class="tas">1</div>
