--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <h1 class="title1">Gra w 3Karty:</h1>
     <button class="opis" onclick="pokazopis()">Opis</button>
     <div class="zasady">
-        Oto gra w 3 karty: 2 karty sa czarne 1 karta jest czerowna zgadnij
-        czerwona
+      Oto gra w 3 karty: 2 karty sa czarne 1 karta jest czerowna zgadnij
+      czerwona
     </div>
-    <div class="motyw">
-      Motyw:
-    </div>
+    <div class="motyw">Motyw:</div>
     <div class="motyw2">
       <div class="czerwony">
         <div class="cz"></div>
@@ -31,7 +29,7 @@
       </div>
     </div>
     <div class="ile">0</div>
-    
+
     <div class="gra">
       <div class="karta" id="karta1"></div>
       <div class="karta" id="karta3"></div>
@@ -56,7 +54,7 @@
     />
     <h3 class="szybkosc">
       Szybkość:
-      
+
       <div class="szyb">0.5</div>
     </h3>
     <input
